--- a/playmate-news-client/package.json
+++ b/playmate-news-client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.3.1",
+    "bootstrap": "^3.4.1",
     "graphql": "^14.2.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.3",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "save": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
